--- a/project/build.properties
+++ b/project/build.properties
@@ -2,7 +2,7 @@
 project.organization=com.twitter
 project.name=util
 sbt.version=0.7.4
-project.version=1.1-SNAPSHOT
+project.version=1.1-MARIUS
 def.scala.version=2.7.7
 build.scala.versions=2.7.7
 project.initialize=false
